# maze_generator

./: .clang-tidy  .gitignore  CMakeLists.txt  CellGraphicsItem.cpp  README.md  launch_dev.sh  package-lock.json
archi/: UML.mdj
backend/: CMakeLists.txt  runKCachegrind.sh
backend/include/: BackEnd.hpp  Backend.hpp  Cell.hpp  EngineFacade.hpp  Maze.hpp  MazeGraph.hpp  MazeGrid.hpp
backend/include/generators/: Backtracking.hpp  GenerateBehavior.hpp  HuntAndKill.hpp
backend/include/maze/: Cell.hpp  MazeGraph.hpp
backend/include/solvers/: AStar.hpp  Dijkstra.hpp  SolveBehavior.hpp
backend/src/: BackEnd.cpp  Backend.cpp  Cell.cpp  EngineFacade.cpp  Maze.cpp  MazeGraph.cpp  MazeGrid.cpp  main.cpp
backend/src/generators/: Backtracking.cpp  HuntAndKill.cpp
backend/src/maze/: MazeGraph.cpp
backend/src/solvers/: AStar.cpp  Dijkstra.cpp
backend/test/: MazeGraphTest.cpp  MazeGridTest.cpp  MazeTest.cpp  mainTest.cpp
frontend/: .gitignore  index.html  package-lock.json
frontend/src/: App.vue  enums.js
frontend/src/components/: Cell.vue  Maze.vue  Menu.vue
headers/: Maze.hpp  Walls.hpp
include/: BackEnd.hpp  Cell.hpp  CellGraphicsItem.hpp  EngineFacade.hpp  MainWindow.h  MainWindow.hpp  Maze.hpp  MazeApplication.hpp  MazeGraphicsItem.hpp  MazeGrid.hpp  WallGraphicsItem.hpp  WallWidget.hpp  Walls.hpp
interfaces/: MainWindow.ui
qml/: AlgoListModel.qml  Cell.qml  EntrySideListModel.qml  Maze.qml  Wall.qml  main.qml  main.qrc
src/: BackEnd.cpp  Cell.cpp  CellGraphicsItem.cpp  EngineFacade.cpp  MainWindow.cpp  Maze.cpp  MazeApplication.cpp  MazeGraphicsItem.cpp  MazeGrid.cpp  WallGraphicsItem.cpp  WallWidget.cpp  Walls.cpp  main.cpp
test/: CellTest.cpp  MazeGridTest.cpp  MazeTest.cpp
